--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    background-color: #e9ecef; /* Cor de fundo */
+    background-color: #d0b17a; /* Cor de fundo */
     color: #4a4e69; /* Cor do texto */
 }
 
@@ -121,7 +121,7 @@ footer {
 /* Seção Habilidades */
 #habilidades {
     padding: 2rem 0;
-    background-color: #e9ecef; /* Cor de fundo similar ao resto do site */
+    background-color: #d0b17a; /* Cor de fundo similar ao resto do site */
     text-align: center; /* Centraliza o título */
 }
 
